<resources>
    <string name="app_name">TTMS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">NYT</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rt_arrow"><![CDATA[>]]></string>
    <string name="search">Search</string>
    <string name="search_articles">Search Articles</string>
    <string name="popular">Popular</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="most_shared">Most Shared</string>
    <string name="most_emailed">Most Emailed</string>
    <string name="title">Title</string>
    <string name="date_published">Date published</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_fragment_label">ListFragment</string>
    <string name="search_articles_here">Search articles here ...</string>
    <string name="articles">Articles</string>
    <string name="get_articles">Click for Article!</string>
</resources>