<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.ttms.myapplication.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.ttms.myapplication.SecondFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

        <action
            android:id="@+id/action_SecondFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>

    <fragment
        android:id="@+id/ListFragment"
        android:name="com.ttms.myapplication.ListFragment"
        android:label="@string/articles"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_ListFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

</navigation>